# swag-labs-online-shop-test-framework

./: .gitignore  pyproject.toml  pytest.ini  readme.md
page_objects/: base_page.py  login_page.py  shop_page.py
tests/: conftest.py  test_login_page_positive.py  test_loging_page_negative.py  test_shop_page.py
