[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["Peter Chay <peterchay88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
selenium = "^4.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
